# JRA2.1.1-PoC

./: .gitignore  README.md  build_c_fmus.sh  build_python_fmus.sh  run_jra12_scenario.sh  run_test_scenario.sh
fmi3/: CMakeLists.txt
fmi3/fmus/Pipeline_configurable/: ConfigurableEventQueue.h  FMI3.xml  NetworkConfiguration.h  Pipeline_configurable.cpp  Pipeline_configurable.h  generate_fmi3xml.py  network.json
fmi3/fmus/Pipeline_deterministic/: DeterministicEventQueue.h  FMI3.xml  Pipeline_deterministic.cpp  Pipeline_deterministic.h
fmi3/fmus/Pipeline_unpredictable/: FMI3.xml  Pipeline_unpredictable.cpp  Pipeline_unpredictable.h  UnpredictableEventStack.h
fmi3/include/: AllowedFMUMode.h  FMUMode.h  InstanceBase.h  fmi3PlatformTypes.h
fmi3/include/deprecated/: fmi3Functions.h
fmi3/src/: AllowedFMUMode.cpp  InstanceBase.cpp  fmi3Functions.cpp
python/: Pandapower_LV.fmu  collector.py  controller_fmpy_mosaik.py  controller_tap.fmu  erigrid_lv_nw.p  fmi_singlepipe_python_dummy.py  periodic_sender_fmpy.py  power_grid_fmpy_mosaik.py  ps_in.csv  scenario_testing_collector.py
python/jra1.2_scenario/: collector.py  controller_fmpy_jra12.py  controller_voltage.py  fmi_singlepipe_python_dummy.py  lv_grid_jra12_fmu.py  lv_grid_jra12_pp.py  power_grid_fmpy_jra12.py  scenario_jra12_collector.py
python/test_scenario/: FMI3Wrapper.py  controller_tap.py  lv_grid_fmu.py  lv_grid_pp.py  output.json  ps_in.csv  scenario_testing.py  scenario_testing_collector.py
